--- a/src/App.css
+++ b/src/App.css
@@ -105,12 +105,12 @@
   background: rgb(255, 255, 255);
   display: grid;
   grid-template-rows: auto 1fr;
+  gap: 30px;
   font-family: 'Sawarabi Gothic', sans-serif;
 }
-.userSearchSection h2{
-  margin: 30px auto 0px auto;
-  font-weight: 700;
-  letter-spacing: 2px;
+.userSearchSection div h2{
+  display: flex;
+  justify-content: center;
 }
 
 .UsersearchForm{
@@ -124,17 +124,75 @@
 .UsersearchForm input{
   margin: 0px 20px 10px 20px;
   padding: 12px;
-  min-width: 200px;
+  padding-bottom: 5px;
+  min-width: 280px;
   font-size: 16px;
   outline: none;
   border: none;
   border-bottom: 2px solid gray;
+  font-family: 'Sawarabi Gothic', sans-serif;
 }
 
 .UsersearchForm button{
+  min-width: 100px;
   border: 1px solid gray;
   border-radius: 10px;
+  margin-right: 40px;
+  margin-top: 5px;
+  padding: 10px;
   cursor: pointer;
+  font-size: 12px;
+  font-weight: 600;
+  font-family: 'Sawarabi Gothic', sans-serif;
+}
+
+/* users card */
+
+.usersCard{
+  margin: 15px;
+  min-height: 70px;
+  border: 2px solid black;
+  border-radius: 20px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+
+.usersCard .imagenContainer{
+  display: flex;
+  justify-content: center;
+  max-height: 50px;
+  max-width: 50px;
+  border: 2px solid gray;
+  border-radius: 50%;
+  margin: 10px;
+}
+
+.usersCard .imagenContainer img{
+  border-radius: 50%;
+  max-width: 100%;
+}
+
+.contentContainer{
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.contentContainer .textContainer{
+  margin: 0px;
+  display: flex;
+  flex-direction: column;
+}
+.textContainer h3{
+  font-size: 18px;
+}
+.textContainer h4{
+  font-size: 13px;
+}
+.contentContainer .inputContainer{
+  margin-left: auto;
+  display: flex;
+  align-items: top;
+  font-size: 13px;
 }
 
 /* Tests */
