--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .container{
   min-height: 100vh;
-  background: blueviolet;
+  background: rgb(209, 180, 236);
 }
 
 
@@ -73,7 +73,6 @@
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 3fr;
-  gap: 20px;
 }
 
 .dash-one{
@@ -84,12 +83,10 @@
 }
 
 .dash-two{
-  background: white;
+  background: rgb(209, 180, 236);
   margin: 5px;
   padding: 0px;
-  border: 2px solid blueviolet;
   border-radius: 20px;
-
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
@@ -99,8 +96,7 @@
 
 /* Users component */
 .userSearchSection{
-  min-width: 100%;
-  min-height: auto;
+  min-width: 99%;
   border-radius: 20px;
   background: rgb(255, 255, 255);
   display: grid;
@@ -108,6 +104,7 @@
   gap: 30px;
   font-family: 'Sawarabi Gothic', sans-serif;
 }
+
 .userSearchSection div h2{
   display: flex;
   justify-content: center;
@@ -197,6 +194,11 @@
 
 /* Tests */
 .test-container{
-  background: plum;
+  min-height: 99%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(226, 168, 226);
   border-radius: 20px;
+  border: 2px solid blueviolet;
 }
